deploy error fix 3